Added /customer route logic.
