# api/swagger/swagger.yaml
@@ -165,8 +165,8 @@ paths:
     get:
       tags:
         - customer
-      summary: Fetches the customer list (including VIPs)
-      description: ""
+      summary: Fetches all customers
+      description: The customer list includes VIPs
       operationId: getCustomers
       consumes:
         - application/json
@@ -178,6 +178,154 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/Success"
+    post:
+      tags:
+        - customer
+      summary: Add a New Customer
+      description: Adds a new customer into the app
+      operationId: addCustomer
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: firstName
+          in: formData
+          description: The first name
+          required: true
+          type: string
+        - name: lastName
+          in: formData
+          description: The last name
+          required: true
+          type: string
+        - name: email
+          in: formData
+          description: The email address
+          required: true
+          type: string
+        - name: phone
+          in: formData
+          description: The phone number
+          required: true
+          type: string
+        - name: country
+          in: formData
+          description: The customer's country
+          required: true
+          type: string
+        - name: isVIP
+          in: formData
+          description: The customer status
+          required: true
+          type: boolean
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Success"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/Error"           
+        
+  "/customer/{id}":
+    x-swagger-router-controller: customerController
+    get:
+      tags:
+        - customer
+      summary: Get a customer by Id
+      description: ""
+      operationId: getCustomerById
+      consumes:
+        - application/json      
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          description: "The id of the customer. Use the _id for testing."
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Customer"
+        "400":
+          description: Invalid id supplied
+          schema:
+            $ref: "#/definitions/Error" 
+        "404":
+          description: Id not found            
+          schema:
+            $ref: "#/definitions/Error" 
+  
+  /device:
+    x-swagger-router-controller: deviceController
+    get:
+      tags:
+        - device
+      summary: Fetches all devices
+      description: The device list includes owner info
+      operationId: getDevices
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters: []
+      responses:
+        default:
+          description: Success
+          schema:
+            $ref: "#/definitions/Success"
+    post:
+      tags:
+        - device
+      summary: Add a New Device
+      description: Adds a new device into the app
+      operationId: addDevice
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: ownerFirstName
+          in: formData
+          description: The owner's first name
+          required: true
+          type: string
+        - name: ownerLastName
+          in: formData
+          description: The owner's last name
+          required: true
+          type: string
+        - name: deviceName
+          in: formData
+          description: The device name on the network
+          required: true
+          type: string
+        - name: deviceType
+          in: formData
+          description: The device type
+          required: true
+          type: string
+        - name: macAddress
+          in: formData
+          description: The device's hardware address
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/Success"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/Error"           
+          
+  #  serves up the swagger file
   /swagger:
     x-swagger-pipe: swagger_raw
 
@@ -196,6 +344,7 @@ definitions:
     properties:
       message:
         type: string
+        
   User:
     required:
       - username
@@ -204,12 +353,30 @@ definitions:
       - lastName
       - email
     properties:
-      id:
-        type: integer
-        format: int64
       username:
         type: string
       password:
+        type: string
+        description: The hashed password
+      firstName:
+        type: string 
+      lastName:
+        type: string
+      email:
+        type: string
+      phone:
+        type: string
+        
+  Customer:
+    required:
+      - firstName
+      - lastName
+      - email
+      - phone
+      - country
+      - isVIP
+    properties:
+      _id:
         type: string
       firstName:
         type: string 
@@ -217,8 +384,42 @@ definitions:
         type: string
       email:
         type: string
-      phoneNumber:
+      phone:
+        type: string      
+      country:
         type: string
-      role:
+      isVIP:
+        type: boolean
+      purchaseNote:
         type: string
-        description: User role
+        
+  Device:
+    required:
+      - owner
+      - deviceName
+      - deviceType
+      - macAddress
+    properties:
+      _id:
+        type: string
+      owner:
+        $ref: "#/definitions/DeviceOwner"
+      deviceName:
+        type: string
+      deviceType:
+        type: string      
+      macAddress:
+        type: string
+  
+  DeviceOwner:
+    required:
+      - firstName
+      - lastName
+    properties:
+      _id:
+        type: string
+      firstName:
+        type: string 
+      lastName:
+        type: string    
+      
