# models/customer.js
@@ -6,10 +6,10 @@ var CustomerSchema   = new Schema({
     lastName: { type: String, required: true },
     email: { type: String, required: true, unique: true },
     phone: { type: String, required: true, unique: true },
-    country: { type: String, required: false },
+    country: { type: String, required: true },
+    isVIP: { type: Boolean, required: true },
 
 	purchaseNote: { type: String, required: false },
-    isVIP: { type: Boolean, required: true },
     isInStore: { type: Boolean, required: false },
 
     createdAt: { type: Date, required: false, default: Date.now },
